--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ Werkzeug==2.3.7
 # Using SQLite instead of PostgreSQL
 # Using SQLite instead of PostgreSQL
 # Using SQLite instead of PostgreSQL
+# Using SQLite instead of PostgreSQL
